<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:wison="http://schemas.android.com/apk/res/com.bonovo.bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothSettings" >
    
    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/setting_music_bg"
        android:contentDescription="@string/description_background_bg"/>
    
    <TextView
        android:id="@+id/tvSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/title_margin_left"
        android:layout_marginTop="@dimen/title_margin_top"
        android:text="@string/description_settings_button"
        android:textColor="#00BDFF"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView1"
        style="@style/NormalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="195dp"
        android:text="@string/bluetooth_name"
        android:textSize="25sp"
        android:visibility="gone"/>
    <TextView
     
        android:id="@+id/textView2"
        style="@style/NormalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/bluetooth_default_name" 
        android:visibility="gone"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/textView3"
        style="@style/NormalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="250dp"
        android:text="@string/bluetooth_pincode" 
        android:textSize="25sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView4"
        style="@style/NormalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/bluetooth_default_pincode" 
        android:visibility="gone"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/imageViewBlueToothStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="450dp"
        android:layout_marginTop="70dp" 
        android:contentDescription="@string/app_name"
        android:src="@drawable/setting_bluetooth_close"/>
        <!-- 
        android:layout_marginTop="@dimen/imageView_bt_status_margin_top" 
        android:layout_centerHorizontal="true"-->

    <TextView
        android:id="@+id/textViewBlueToothStatus"
        android:textColor="#ffffffff" 
        android:background="#00000000"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="460dp"
        android:layout_marginTop="240dp"
        android:layout_below="@+id/imageViewBlueToothStatus"
        android:layout_centerHorizontal="true"
        android:text="@string/bluetooth_status_closed"
        />

    <TextView
        android:id="@+id/textViewPhoneLinkStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="460dp"
        android:layout_marginTop="240dp" 
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginRight="@dimen/text_link_status_phone_margin_right"
        android:text="@string/phone_link_status_closed"
        android:textColor="#ffffffff" 
        android:background="#00000000"
        android:textSize="25sp"
        android:visibility="gone" />  
 
   	<!-- Switch 
		android:id="@+id/swBtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="50dp"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="30dp"
		android:thumbTextPadding="2dp"
	    android:textSize="33sp"
		style="@style/NormalTextView"
		android:switchTextAppearance="@style/status"
		android:text="@string/description_switch_bt_status"     
		  /> -->
   <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="70dp"
        android:textColor="#ffffffff" 
        android:background="#00000000"
        android:textSize="25sp"
        android:text="@string/description_switch_bt_status"
        />
   	<com.bonovo.bluetooth.MySwitch
   	    android:id="@+id/swBtStatus"
   	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="74dp"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="240dp"
        android:clickable="true"
        android:thumbTextPadding="2dp"
        wison:switchMinHeight="33dp"
        wison:switchMinWidth="45dp"
        wison:thumb="@drawable/switch_thumb_button"
        wison:thumbTextPadding="25dp"
        wison:trackOff="@drawable/switch_track_off_button"
        wison:trackOn="@drawable/switch_track_on_button" 
   	    />

    <!-- Switch
		android:id="@+id/swBtMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/swBtStatus" 
		android:height="100dp"
		android:layout_alignLeft="@+id/swBtStatus"
	    android:textColor="#ffffffff" 
        android:background="#00000000"
        android:thumbTextPadding="2dp"
        android:textSize="33sp"
        android:switchTextAppearance="@style/status"
		android:text="@string/description_switch_bt_music" 
		android:visibility="gone" /-->
   <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"   
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="130dp"
        android:textColor="#ffffffff" 
        android:background="#00000000"
        android:textSize="25sp"
   		android:text="@string/description_switch_bt_music" 
		android:visibility="gone" />
   
    <com.bonovo.bluetooth.MySwitch
        android:id="@+id/swBtMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/swBtStatus" 
		android:layout_alignParentTop="true"
		android:layout_marginTop="132dp"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="240dp"
		android:layout_alignLeft="@+id/swBtStatus"
        android:clickable="true"
        android:thumbTextPadding="2dp"
        wison:switchMinHeight="33dp"
        wison:switchMinWidth="45dp"
        wison:thumb="@drawable/switch_thumb_button"
        wison:thumbTextPadding="25dp"
        wison:trackOff="@drawable/switch_track_off_button"
        wison:trackOn="@drawable/switch_track_on_button" 
		android:visibility="gone" />
</RelativeLayout>
