<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/incomingButtonContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:id="@+id/callWaitingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkgreen"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/title_call_waiting"
            android:textColor="@color/white"
            android:textSize="@dimen/call_info_text_size"
            android:visibility="visible" />
	   	
	   	<TextView
	   	    android:id="@+id/CallWaitingNumber"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_margin="5dp"
	   	    android:layout_weight="6"
	   	    android:textColor="@color/white"
	   	    android:textSize="@dimen/call_number_text_size"
	   	    android:visibility="visible" />

	   	<Button
	   	    android:id="@+id/CWSwitch"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_weight="2"
	   	    android:text="@string/call_waiting_answer" />

	   	<Button
	   	    android:id="@+id/CWRejectButton"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_weight="2"
	   	    android:text="@string/call_waiting_reject" />
	   	
	</LinearLayout>
    
	<LinearLayout
	    android:id="@+id/callDetailsContainer"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="30dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:layout_marginTop="30dp"
	    android:orientation="horizontal" >
    	
	    <ImageView
	        android:id="@+id/contactPhoto"
	        android:layout_width="100dp"
	        android:layout_height="100dp"
	        android:layout_marginRight="20dp"
	        android:scaleType="fitCenter" />
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	    
		    <TextView
		        android:id="@+id/tvTelephoneNumber"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:textSize="@dimen/call_number_text_size"
		        android:visibility="visible" />
			
			<TextView
			    android:id="@+id/tvTelephoneInfo"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_marginTop="10dp"
			    android:gravity="top"
			    android:textColor="@color/gray"
			    android:textSize="@dimen/call_info_text_size" />

			<Chronometer
			    android:id="@+id/timer"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="20dp"
			    android:textColor="@color/gray"
			    android:textSize="@dimen/call_info_text_size"
			    android:visibility="invisible" />

			</LinearLayout>
    	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:gravity="center" >
        
        <ImageButton
            android:id="@+id/MuteMicButton"
            android:layout_width="80dp"
            android:layout_height="@dimen/call_button_height"
            android:layout_margin="2dp"
            android:background="@drawable/btn_compound_background"
            android:src="@drawable/ic_dial_call_unmuted"
            android:state_enabled="false" />
        
        <ImageButton
            android:id="@+id/DialpadViewButton"
            android:layout_width="80dp"
            android:layout_height="@dimen/call_button_height"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/btn_compound_background"
            android:src="@drawable/ic_dial_dialpad"
            android:state_enabled="false" />
        
        <ImageButton
            android:id="@+id/endCallButton"
            android:layout_width="200dp"
            android:layout_height="@dimen/call_button_height"
            android:layout_margin="2dp"
            android:background="@drawable/end_call_background"
            android:contentDescription="@string/description_dial_button"
            android:src="@drawable/ic_dial_endcall"
            android:state_enabled="false" />

        <ImageButton
            android:id="@+id/answerButton"
            android:layout_width="200dp"
            android:layout_height="@dimen/call_button_height"
            android:layout_margin="2dp"
            android:background="@android:color/holo_green_light"
            android:contentDescription="@string/description_target_answer"
            android:src="@drawable/ic_dial_incoming_call"
            android:state_enabled="false" />

    </LinearLayout>

</LinearLayout>
